// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute xbci api should return success 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"index\\":\\"xbci\\",\\"quote\\":\\"USD\\",\\"source\\":\\"coinmarketcap\\"}}",
    "message": "Nock: No match for request {
  \\"method\\": \\"GET\\",
  \\"url\\": \\"https://pro-api.xangle.io/v1/index/xangle-bluechip?reference_timestamp=2022-02-11T07:05:14\\",
  \\"headers\\": {
    \\"accept\\": \\"application/json, text/plain, */*\\",
    \\"x-xangle_api_key\\": \\"test-key\\",
    \\"user-agent\\": \\"axios/0.24.0\\"
  }
}",
    "name": "AdapterError",
    "url": "https:/pro-api.xangle.io/v1/index/xangle-bluechip",
  },
  "jobRunID": "1",
  "providerStatusCode": 0,
  "status": "errored",
  "statusCode": 200,
}
`;

exports[`execute xlci api should return success 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"index\\":\\"xlci\\",\\"quote\\":\\"USD\\",\\"source\\":\\"coinmarketcap\\"}}",
    "message": "Nock: No match for request {
  \\"method\\": \\"GET\\",
  \\"url\\": \\"https://pro-api.xangle.io/v1/index/xangle-largecap?reference_timestamp=2022-02-11T07:05:14\\",
  \\"headers\\": {
    \\"accept\\": \\"application/json, text/plain, */*\\",
    \\"x-xangle_api_key\\": \\"test-key\\",
    \\"user-agent\\": \\"axios/0.24.0\\"
  }
}",
    "name": "AdapterError",
    "url": "https:/pro-api.xangle.io/v1/index/xangle-largecap",
  },
  "jobRunID": "1",
  "providerStatusCode": 0,
  "status": "errored",
  "statusCode": 200,
}
`;
